--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "devDependencies": {},
   "scripts": {
     "sass:style": "sass ./src/scss/style.scss ./assets/css/style.css",
-    "sass:style-min": "sass ./src/scss/style.scss ./assets/css/style.min.css --style compressed",
+    "sass:style-min": "sass --watch ./src/scss/style.scss ./assets/css/style.min.css --style compressed",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "description": ""
